# grid

./: .gitignore  Cargo.toml  README.md  main.js
assets/shaders/: coords_overlay.wgsl
src/: code.txt  design.txt  grid.rs  main.rs  main2.rs  mesh.rs  plugin.rs
src/coords_overlay/: mod.rs
src/grid/: systems.rs
src/render/: mod.rs  plugin.rs  systems.rs
src/sim/: mod.rs  plugin.rs  resources.rs  systems.rs
