[package]
name = "engine"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking"] } # make sure this is the latest version
bevy_mesh = "0.18.0"
bevy_asset = "0.18.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
avian2d = "0.5"

